<resources>
    <string name="google_map_api_key">AIzaSyAtoUXCcrGTxELOHn5ynYsuSbwoD886nZQ</string>
    <string name="formatted_place_data">
        %1$s\n
    </string>
    <string name="app_name">Carnot</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_signup">Sign Up</string>
    <string name="lbl_signin">Sign In</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_enter_your_full_name">Enter Your Full Name</string>
    <string name="lbl_email_id">Email ID</string>
    <string name="lbl_email_id_mobile">Email ID/Mobile No</string>
    <string name="lbl_enter_email_id">Enter Email ID</string>
    <string name="lbl_enter_email_id_mobile">Enter Email ID/Mobile No</string>
    <string name="lbl_password_hint">Should be at least 8 characters</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="lbl_already_account_sign_in">Already have account, Sign in</string>
    <string name="lbl_sign_in">SIGN IN</string>
    <string name="lbl_send_password_reset_mail">Send One-time-password SMS</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_cars">Car Garage</string>
    <string name="lbl_carnot">Friends</string>
    <string name="lbl_welcome_x">Welcome %1$s</string>
    <string name="lbl_all_you_need">All you need is...</string>
    <string name="lbl_carnot_adapter_info">You will need a new adapter for every car that you want to add.</string>
    <string name="lbl_carnot_adapter">Carnot Adapter</string>
    <string name="lbl_internet_access_info">Active internet connection to sync your carnot adapter.</string>
    <string name="lbl_internet_access">Internet Access</string>
    <string name="lbl_car_keys">Car Keys</string>
    <string name="lbl_car_keys_info">You will need car keys to plug-in the device.</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_safety_first">Safety First</string>
    <string name="lbl_safety_first_info">In case of emergency or accidents, your emergency contacts will be notified of your location, and other details.</string>
    <string name="lbl_contact_1">Contact 1</string>
    <string name="lbl_contact_2">Contact 2</string>
    <string name="lbl_contact_3">Contact 3</string>
    <string name="hint_select_contact">Select Contact</string>
    <string name="lbl_car_info">Car Info.</string>
    <string name="lbl_about_car">Tell us about your car.</string>
    <string name="lbl_nickname">Nickname</string>
    <string name="hint_name_your_car">Name your car!</string>
    <string name="lbl_license_no">License No.</string>
    <string name="hint_enter_license_no">Enter License Number</string>
    <string name="lbl_make">Make</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_model">Model</string>
    <string name="lbl_plugin_adapter">Plug-In Adapter</string>
    <string name="lbl_plugin_adapter_info">Insert the Carnot adapter in the OBD port of your car.</string>
    <string name="lbl_need_help">Need Help?</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_bluetooth_settings">Bluetooth Settings</string>
    <string name="lbl_bluetooth_settings_info">Turn Bluetooth On. Carnot adapter needs to pair with your phone to activate.</string>
    <string name="lbl_Bluetooth">Bluetooth</string>
    <string name="lbl_security_code">Device setup</string>
    <string name="lbl_security_code_info">Enter your 16-digit device passcode.</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_previous">Previous</string>
    <string name="lbl_share_location">SHARE LOCATION</string>
    <string name="lbl_with_family">With Family</string>
    <string name="lbl_custom">Custom</string>
    <string name="lbl_connection">CONNECTION</string>
    <string name="lbl_engine_health">ENGINE HEALTH</string>
    <string name="lbl_connected">CONNECTED</string>
    <string name="lbl_not_connected">NOT CONNECTED</string>
    <string name="lbl_signal">SIGNAL</string>
    <string name="lbl_advanced_stats">ADVANCED STATS</string>
    <string name="lbl_battery_health">BATTERY HEALTH</string>
    <string name="lbl_cabintemperature">CABINTEMPERATURE</string>
    <string name="action_notification">Notification</string>
    <string name="action_car_passport">Car Passport</string>
    <string name="action_device_info">Device Info</string>
    <string name="action_alert_settings">Alert Settings</string>
    <string name="lbl_tab_dashboard">DASHBOARD</string>
    <string name="lbl_tab_diagnostics">DIAGNOSTICS</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_tyre_pressure">TYRE PRESSURE</string>
    <string name="lbl_P0729">P0729</string>
    <string name="lbl_scan_for_errors">SCAN FOR ERRORS</string>
    <string name="lbl_help1">Hear something funny? Identify noises</string>
    <string name="lbl_help2">Read the car e-manual</string>
    <string name="lbl_error_code_x">Error Code %s</string>
    <string name="lbl_error_code">Error Code %s</string>
    <string name="lbl_Medium">Medium</string>
    <string name="lbl_locate">LOCATE</string>
    <string name="lbl_audible_title">INDENTIFY THE SOUND IN YOUR CAR</string>
    <string name="lbl_mileage">mileage</string>
    <string name="lbl_on_trip">ON TRIP</string>
    <string name="lbl_trip">trips</string>
    <string name="lbl_trip_in_hr">trip (Hr)</string>
    <string name="lbl_trip_in_hrs">trip (Hrs)</string>
    <string name="lbl_distance_in_km">distance (km)</string>
    <string name="lbl_carbon_footprint_with_kg">CARBON FOOTPRINT (KG)</string>
    <string name="lbl_carbon_footprint">CARBON FOOTPRINT</string>
    <string name="lbl_kmpl">kmpl</string>
    <string name="lbl_past_trips">past trips</string>
    <string name="lbl_highlights">RECENT TRIPS</string>
    <string name="lbl_view_all_trips">View All Trips</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_all_time">All Time</string>
    <string name="lbl_distance">Distance</string>
    <string name="lbl_bad_battery">Bad Battery</string>
    <string name="lbl_audible_error_codes">Audible Error Codes</string>
    <string name="lbl_drive_score">Drive score</string>
    <string name="lbl_what_does_it_mean_for_environment">What does it mean for the environment?</string>
    <string name="lbl_will_have_to_work">Will have to work for 1 year to offset this emission.</string>
    <string name="lbl_engine_oil">Engine Oil</string>
    <string name="lbl_carnot_device_number">Carnot Device Number</string>
    <string name="lbl_firmware_id">Firmware ID</string>
    <string name="copyright_carnot_2016">&#169; Carnot 2016</string>
    <string name="lbl_firmware_emannual">Read about Firmware Updates and Mannual here</string>
    <string name="lbl_reset_device">Reset Device</string>
    <string name="lbl_device_reset_desc">Resetting the device will delete all past record and information stored about your car and will allow you to start a fresh</string>
    <string name="action_reset_device">Reset Device</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="dialog_title_confirm_changes">Confirm Changes</string>
    <string name="lbl_confirm_dialog_msg">You will not be able to  restore any saved information.</string>
    <string name="lbl_select_cover_photo">Select Cover Photo</string>
    <string name="lbl_take_photo">Take Photo</string>
    <string name="lbl_choose_from_gallery">Choose From Gallery</string>
    <string name="lbl_notification_settings_info">We inform you in case of Rash Driving and Speeding above limit. Please set limit.</string>
    <string name="lbl_Rash_Driving">Rash Driving</string>
    <string name="lbl_empty_msg_car_passport">You haven\'t added any documents yet.</string>
    <string name="lbl_select_document_type">Select Document Type</string>
    <string name="lbl_registration_certificate">Registration Certificate</string>
    <string name="lbl_puc">PUC</string>
    <string name="lbl_insurance">Insurance</string>
    <string name="lbl_Driver_License">Driver\'s License</string>
    <string name="lbl_service_details">Service Details</string>
    <string name="lbl_yellow_submarine">Yellow Submarine</string>
    <string name="lbl_coolanttemperature">COOLANT TEMPERATURE</string>
    <string name="lbl_all_trips">All Trips</string>
    <string name="lbl_end_trip">End Trip</string>
    <string name="lbl_speed">Speed</string>
    <string name="lbl_add_registration_certificate">Add Registration Certificate</string>
    <string name="lbl_document_type">Document Type</string>
    <string name="hint_registration_certificate">Registration Certificate</string>
    <string name="lbl_registration_number">Registration Number</string>
    <string name="hint_registration_number">Registration Number</string>
    <string name="lbl_date_of_purchase">Date Of Purchase</string>
    <string name="hint_dd_mm_yy">dd/mm/yy</string>
    <string name="lbl_document">Document</string>
    <string name="lbl_documents">Documents</string>
    <string name="lbl_service_history">Service History</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_name_service_centre">Name of Service Centre</string>
    <string name="hint_type_name_of_service_centre">Type name of the service centre</string>
    <string name="lbl_date_of_service">Date of Service</string>
    <string name="lbl_add_service_details">Add Service Details</string>
    <string name="action_car_profile">Car Profile</string>
    <string name="lbl_car_profile">Car Profile</string>
    <string name="lbl_notification_settings">Notification Settings</string>
    <string name="lbl_Speed_Threshold">Speed Threshold [%1$s]</string>
    <string name="lbl_70">70</string>
    <string name="lbl_200">200</string>
    <string name="lbl_invite_a_rider">Invite A Rider</string>
    <string name="hint_invite_rider">Type in Email ID</string>
    <string name="lbl_search_rider">Search Rider</string>
    <string name="lbl_recent_badges">Recent Badges</string>
    <string name="lbl_view_all">View All</string>
    <string name="lbl_driver_score">Driver Score</string>
    <string name="lbl_distance_with_km">DISTANCE (KM)</string>
    <string name="lbl_good_gear_change">Good Gear Change</string>
    <string name="lbl_idling">Idling</string>
    <string name="lbl_speeding">Speeding</string>
    <string name="lbl_no_hard_breaks">No Hard Brakes</string>
    <string name="lbl_hard_acceleration">Hard acc/brakes</string>
    <string name="lbl_hard_acceleration_brak">Hard Acceleration and Braking</string>
    <string name="lbl_speed_in_kmpl">Speed (kmpl)</string>
    <string name="lbl_speed_in_kmph">Speed (kmph)</string>
    <string name="lbl_dismiss">dismiss</string>
    <string name="lbl_badge_info">Level up by changing your gears more accurately based on speed</string>
    <string name="lbl_speed_with_kmph">Speed (KMPH)</string>
    <string name="lbl_time_with_hr">Time (HR)</string>
    <string name="lbl_trip_completed">Trip Completed</string>
    <string name="lbl_2_hard_accelerations">2 Hard Accelerations</string>
    <string name="lbl_here_are_some_tips_to_boost_your_score">HERE ARE SOME TIPS TO BOOST YOUR SCORE</string>
    <string name="lbl_send_invite">Send Invite</string>
    <string name="action_logout">Logout</string>
    <string name="action_my_profile">My Profile</string>
    <string name="action_on_trip">On Trip</string>
    <string name="action_add_car">Add Car</string>
    <string name="hint_enter_license_no_hint">eg, DL-01-AK-0012</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_diesel">Diesel</string>
    <string name="lbl_petrol">Petrol</string>
</resources>