<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_on_trip"
        android:icon="@drawable/ic_mainnav_view_white"
        android:orderInCategory="100"
        android:title="@string/action_on_trip"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_mainnav_share_white"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_car_passport"
        android:orderInCategory="100"
        android:title="@string/action_car_passport"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_car_profile"
        android:orderInCategory="100"
        android:title="@string/action_car_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_device_info"
        android:orderInCategory="100"
        android:title="@string/action_device_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rash_driving_noti"
        android:orderInCategory="100"
        android:title="@string/action_alert_settings"
        app:showAsAction="never" />
</menu>
