<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="1"
        android:title="@string/action_notification"
        app:actionLayout="@layout/notification_update_counter"
        app:showAsAction="always" />

    <!--android:icon="@drawable/ic_mainnav_bell_white"-->

    <!--android:icon="@drawable/ic_nav_plus_white"-->
    <item
        android:id="@+id/action_add_car"
        android:orderInCategory="1"
        android:title="@string/action_add_car"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_my_profile"
        android:orderInCategory="2"
        android:title="@string/action_my_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="3"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="4"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_car_passport"
        android:orderInCategory="2"
        android:title="@string/action_car_passport"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_car_profile"
        android:orderInCategory="3"
        android:title="@string/action_car_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_device_info"
        android:orderInCategory="4"
        android:title="@string/action_device_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rash_driving_noti"
        android:orderInCategory="5"
        android:title="@string/action_rash_driving_noti"
        app:showAsAction="never" />-->
</menu>
