<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background_color"
    android:orientation="vertical">

    <com.carnot.custom_views.AppTextViewMedium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/scale_16dp"
        android:layout_marginTop="@dimen/scale_25dp"
        android:text="@string/lbl_all_you_need"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scale_16dp"
            android:layout_marginTop="@dimen/scale_33dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_carnot_adapter_cirlce_big_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/scale_16dp"
                    android:orientation="vertical">


                    <com.carnot.custom_views.AppTextViewMedium
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/lbl_carnot_adapter"
                        android:textColor="@color/white" />

                    <com.carnot.custom_views.AppTextViewLight
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/scale_9dp"
                        android:text="@string/lbl_carnot_adapter_info"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_33dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_internet_cirlce_big_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/scale_16dp"
                    android:orientation="vertical">


                    <com.carnot.custom_views.AppTextViewMedium
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/lbl_internet_access"
                        android:textColor="@color/white" />

                    <com.carnot.custom_views.AppTextViewLight
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/scale_9dp"
                        android:text="@string/lbl_internet_access_info"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_33dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info_cirlce_big_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/scale_16dp"
                    android:orientation="vertical">

                    <com.carnot.custom_views.AppTextViewMedium
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/lbl_car_keys"
                        android:textColor="@color/white" />

                    <com.carnot.custom_views.AppTextViewLight
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/scale_9dp"
                        android:text="@string/lbl_car_keys_info"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>